MDEV-22924 fixup: Replace C++11 nullptr

Only starting with MariaDB Server 10.4 we may depend on C++11.